apps/base/langfuse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: langfuse
  labels:
    toolkit.fluxcd.io/tenant: kog-team
