apps/base/langfuse/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: langfuse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-deployment
spec:
  selector:
    matchLabels:
      app: langfuse-app
  template:
    metadata:
      labels:
        app: langfuse-app
    spec:
      containers:
        - name: langfuse
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
          image: ghcr.io/langfuse/langfuse:latest
          ports:
            - containerPort: 3000
